# catia-and-jamie

./: .gitignore  LICENSE  README.md  example.docker-compose.yml
backend/: Cargo.toml  Dockerfile  example.docker-compose.yml
backend/.sqlx/: query-07561bcfa0150240b03ebb04160bd3d53ad887628033f6ebd32950d0cb2b4869.json  query-0b3ec35409b01c2813ad122a2fc72d3cc95039770aa8a4fd939214e10a40f72f.json  query-300d85cc00b5642f4b208e013399741328c5131dde7fba5217aa0eb4a618e5a2.json  query-407bcf6fc34531bce48f9813148deaac4325cd3d4707a0e3a272662e7f02a8b7.json  query-44db8368d6071704561be79cac02ac436f6531de3cc0dc2ae87b229fefc6a23e.json  query-4b20f8c78a0e19b75f3df22f9fecd9b4450b5d902b5762c4383fec046943a8ad.json  query-71170e897228e35e9fa442a962b415b4354a015161bcb3dd64b37b1e77c5b221.json  query-b8e6a5285b02fdabc67ed956d9c67d9ce4aa43356a7aa3d20cae17778402766a.json  query-be8de584d2745b2a0498adeb20d51fa6e77947db4717a656d22b2d5df0cc640d.json  query-c1e4394463431bbc87b2b21230662c85562002ecfa7a0607c78f927b39dbd8e1.json  query-f2d542dd5aa96bc750dc2be64e73a2493a15d6a7a10e3a8c96aeea61ea799c92.json  query-ffd2dd0273dd9d9f040b7f42b408b6e4c15ea16dbacb3324cae99349527be26d.json
backend/migrations/: 20240219022257_init.down.sql  20240219022257_init.up.sql  20240219022409_sessions.down.sql  20240219022409_sessions.up.sql  20240326012455_memories.down.sql  20240326012455_memories.up.sql
backend/src/: main.rs  snowflake.rs
backend/src/http/: mod.rs
backend/src/http/middleware/: auth.rs  method.rs  mod.rs
backend/src/http/router/: mod.rs
backend/src/http/router/auth/: login.rs  logout.rs  (+2 more)
(+22 files in other folders)
