[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
time = { version = "0.3" }
# Web framework and dependencies
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
# Authentication
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9.2" }
openssl = { version = "0.10" }
hex = { version = "0.4" }
# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
# Other
lazy_static = { version = "1.4" }
regex = { version = "1.10" }
base64 = { version = "0.21" }
image = { version = "0.24" }